# Desynced-Wiki-Scripts

./: .gitignore  .pylintrc  DEV.md  LICENSE  README.md  analyze_lua.py  clear_data_category.py  cli__example_script.py  cli_cleanup_page_templates.py  cli_create_missing_pages.py  cli_fetch_main_from_steam.py  cli_generate_wiki.py  cli_missing_images.py  cli_remove_data_pages.py  cli_upload_wiki.py  config.ini.example  fetch_main_from_steam.py  generate_wiki.py  import.py  prune_hidden_data.py  pyproject.toml  requirements.txt  upload_wiki.py
.github/workflows/: pylint.yml  test.yaml
cli_tools/: __init__.py  cleanup_page_templates.py  cli_common.py  common.py  create_missing_pages.py  remove_data_pages.py  resume.py
docs/: README.md
lua/: game_data.py  lua_util.py  mining_recipe.py  recipe.py
lua_modules/: Navboxes.lua  README.md  TechRecipe.lua
lua_wiki_modules/: Naboxes_doc.mediawiki  Navboxes.lua  TechRecipe.lua
models/: category_filters.py  component.py  decorators.py  decorators_options.py  entity.py  instructions.py  item.py  mining_recipe.py  recipe.py  sockets.py  tech.py  types.py  wiki_metadata.py
src/desynced_wiki_scripts/: cli__example_script.py  cli_cleanup_page_templates.py  cli_create_missing_pages.py  cli_fetch_main_from_steam.py  (+4 more)
test/: cargo_printer_test.py
util/: config.py  constants.py  logger.py  logging_util.py  ratelimiter.py
wiki/: data_categories.py  desynced_wiki_wrapper.py  page_template.py  page_url.py  ratelimiter.py  templater.py  titles.py  wiki_constants.py  wiki_name_overrides.py  wiki_override.py  wiki_util.py
(+44 files in other folders)
